Fixed scroll being broken on single pages
Mouse wheel scrolling would cease to function due to fullPage.js's stylesheet that applies overflow: hidden to both the html and body elements. A fix was put into place that adds the class wp-single to the html element if the current page is a single page/post. The html element is then selected in CSS with the NOT operand so it will not select html.wp-single.

--- a/js/jquery.fullPage.css
+++ b/js/jquery.fullPage.css
@@ -5,7 +5,7 @@
  *
  * Copyright (C) 2013 alvarotrigo.com - A project by Alvaro Trigo
  */
-html, body {
+html:not(.wp-single), body:not(.wp-single) {
     margin: 0;
     padding: 0;
 	overflow:hidden;
